# PrimerProyectoLenguajes

./: Cargo.toml  sonar-project.properties
backend/: Cargo.toml
backend/src/: clienteAuto.py  main.rs
frontend/: app.py  asientos.json  estado_asietos.html  index.htm  index.html  realizar_pagos.html  script.js  solicitar_asientos.html  style.css  test_page.py
frontend/env/: pyvenv.cfg
frontend/env/Scripts/: activate  activate.bat
frontend/scripts/: estado_asientos.js  realizar_pagos.js  solicitar_asientos.js
frontend/static/: compra.js  estado.js  style.css
frontend/templates/: compra.html  estado.html
src/: clienteAuto.py  main.rs
