[package]
name = "gestor_asientos"
version = "0.1.0"
edition = "2021"

# Configuración para Tokio
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"